# lorg

./: .editorconfig  CMakeLists.txt  Makefile  README.md  config.mk  lorg.1
.fossil-settings/: ignore-glob
src/: lorg.cpp  lorg.hpp  main.cpp
